outputs/tsp_constructive-constructive/2025-09-19_00-14-35/evaluations/problem_eval-9082455505801605766_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" metric that combines proximity, connectivity, and potential path savings, while using a non-linear exploration factor to balance exploration and exploitation more adaptively.}
              ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" metric that combines proximity, connectivity, and potential path savings, while using a non-linear exploration factor to balance exploration and exploitation more adaptively.}
              ^
SyntaxError: unterminated string literal (detected at line 1)
